# Chinese_medicinal_herbs

./: README.md  main.sql  基于深度学习的智能中药材识别-设计研究报告.docx
web端+后端/: README.md  app.py  baidu_ai.py  config.py  create_admin.py  data_loader.py  extract_herb_images.py  generate_charts.py  model.py  models.py  requirements.txt  system_design_thesis.md  train_model.py  接口文档.md  汇总.xlsx
web端+后端/huawei_iot/: HuaWei_iot.py  app.py  data_analyze.py  t1.py
web端+后端/instance/: herb_recognition.db  herbs.db
web端+后端/migrations/versions/: 93b4d346d485_add_season_field_to_herb_model.py  fc6de55247f7_add_new_herb_fields.py
web端+后端/results/: training_metrics_epoch_10_20250518_012855.json  training_metrics_epoch_11_20250518_014438.json  training_metrics_epoch_12_20250518_020018.json  training_metrics_epoch_13_20250518_021552.json  training_metrics_epoch_14_20250518_023132.json  training_metrics_epoch_15_20250518_024718.json  training_metrics_epoch_16_20250518_030258.json  training_metrics_epoch_17_20250518_031841.json  training_metrics_epoch_18_20250518_033424.json  training_metrics_epoch_19_20250518_035010.json  training_metrics_epoch_1_20250517_230824.json  training_metrics_epoch_20_20250518_040541.json  training_metrics_epoch_21_20250518_042127.json  training_metrics_epoch_2_20250517_232353.json  training_metrics_epoch_3_20250517_233926.json  training_metrics_epoch_4_20250517_235508.json  training_metrics_epoch_5_20250518_001053.json  training_metrics_epoch_6_20250518_002624.json  training_metrics_epoch_7_20250518_004207.json  training_metrics_epoch_8_20250518_005735.json  training_metrics_epoch_9_20250518_011314.json
web端+后端/routes/: __init__.py  admin.py  admin_herbs.py
web端+后端/templates/: base.html  detect.html  herb_recommend.html  history.html  index.html  login.html  register.html  result.html  sensor_dashboard.html
web端+后端/templates/admin/: add_herb.html  dashboard.html  edit_herb.html  herbs.html  history.html  user_detail.html  user_list.html  users.html
微信小程序端/: .prompt-context  all_herb_data.json  app.json  herb_data.json  project.config.json  project.private.config.json  readme.md  项目文件结构.md
微信小程序端/pages/announcement-detail/: announcement-detail.js  announcement-detail.json  announcement-detail.wxml  announcement-detail.wxss
微信小程序端/pages/detail/: detail.js  detail.wxml  detail.wxss
硬件端/: BUILD.gn  README.md  bsp_adc_0.c  bsp_adc_6.c  bsp_adc_6.h  template.c  test1.c
鸿蒙端/: oh-package-lock.json5  oh-package.json5
(+32 files in other folders)
