# Copyright (c) 2024 www.prechin.cn
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License. 

static_library("template") {
    sources = [
        "template.c",
        "bsp/src/bsp_led.c",
        # "bsp/src/bsp_beep.c",
        # "bsp/src/bsp_relay.c",
        # "bsp/src/bsp_key.c",
        # "bsp/src/bsp_dc_motor.c",
        # "bsp/src/bsp_step_motor.c",
        # "bsp/src/bsp_exti.c",
        # "bsp/src/bsp_time.c",
        # "bsp/src/bsp_pwm.c",
        # "bsp/src/bsp_uart.c",
          "bsp/src/bsp_adc.c",
        # "bsp/src/bsp_adc_6.c",
        # "bsp/src/bsp_adc_0.c",
        # "bsp/src/bsp_ds18b20.c",
         "bsp/src/bsp_dht11.c",
        # "bsp/src/bsp_oled.c",
        # "bsp/src/bsp_nfc.c",
        "bsp/src/bsp_wifi.c",
        "bsp/src/bsp_mqtt.c",

        "third_party/paho.mqtt.embedded-c/MQTTPacket/src/MQTTConnectClient.c",
        "third_party/paho.mqtt.embedded-c/MQTTPacket/src/MQTTConnectServer.c",
        "third_party/paho.mqtt.embedded-c/MQTTPacket/src/MQTTDeserializePublish.c",
        "third_party/paho.mqtt.embedded-c/MQTTPacket/src/MQTTFormat.c",
        "third_party/paho.mqtt.embedded-c/MQTTPacket/src/MQTTPacket.c",
        "third_party/paho.mqtt.embedded-c/MQTTPacket/src/MQTTSerializePublish.c",
        "third_party/paho.mqtt.embedded-c/MQTTPacket/src/MQTTSubscribeClient.c",
        "third_party/paho.mqtt.embedded-c/MQTTPacket/src/MQTTSubscribeServer.c",
        "third_party/paho.mqtt.embedded-c/MQTTPacket/src/MQTTUnsubscribeServer.c",
        "third_party/paho.mqtt.embedded-c/MQTTPacket/src/MQTTUnsubscribeClient.c",
    ]


    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/kal/cmsis",
        "//base/iot_hardware/peripheral/interfaces/kits",
        "bsp/include",
        
        "wifiservice",
        "third_party/paho.mqtt.embedded-c/MQTTPacket/src",
        "third_party/cJSON",
    ]
}
